tests/ui/object-safety/object-safety-sized-2.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized-2.rs:14:31
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                               ^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-sized-2.rs:9:18
   |
LL | trait Bar
   |       --- this trait cannot be made into an object...
LL |     where Self : Sized
   |                  ^^^^^ ...because it requires `Self: Sized`

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized-2.rs:14:31
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                               ^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-sized-2.rs:9:18
   |
LL | trait Bar
   |       --- this trait cannot be made into an object...
LL |     where Self : Sized
   |                  ^^^^^ ...because it requires `Self: Sized`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
